# python-playwright-ai

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/allure-reporting/: SKILL.md
.claude/skills/pydantic-patterns/: SKILL.md
.claude/skills/python-patterns/: SKILL.md
.claude/skills/python-playwright-patterns/: SKILL.md
.github/workflows/: ci.yml  claude.yml
tests/: conftest.py
tests/framework/: base_test.py
tests/framework/config/: __init__.py  settings.py
tests/framework/pages/: __init__.py  base_page.py
tests/framework/pages/alerts_frames_windows/: alerts_page.py  modal_dialogs_page.py
tests/framework/pages/book_store/: book_store_page.py  login_page.py
tests/framework/pages/elements/: check_box_page.py  text_box_page.py
tests/framework/pages/forms/: practice_form_page.py
tests/framework/pages/interactions/: droppable_page.py  selectable_page.py
tests/framework/pages/widgets/: date_picker_page.py  slider_page.py
tests/tests/: test_alerts_frames_windows.py  test_book_store.py  test_elements.py  test_forms.py  test_interactions.py  test_widgets.py
